--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Aurelie Cedia <2491@holbertonschool.com>
+Tanguy SAURA-NERI <2501@holbertonschool.com>
